tests/rosetta/out/Smalltalk/ackermann-function-2.out
/tmp/ackermann-function-2.st:6: parse error, expected ']'
